see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

20-Dec-2009 Mark Dexter
+ Partial implementation of Category List in com_content (thanks to Andrea Tarr, Elin Waring, Angie Radtke)
+ Implement global and menu item parameters
# Fix 404 error in archive view (thanks to Elin Waring)

14-Dec-2009 Ian MacLennan
^ Modified JString to use phputf8 to support systems without mb_string

14-Dec-2009 Andrew Eddie
 # Fixed bug in installation and diff SQL. TEXT fields can't have defaults.

13-Dec-2009 Mark Dexter
^ Merged in com_content changes. Implement some params for Category List layout.
# Fixed read more param for articles.
# Fixed problem with reading params for custom layouts. Always load standard params for standard layouts.
# Fixes to module modal on menu assignments (thanks to Andrea Tarr).

13-Dec-2009 Andrew Eddie
 # Fixed JHtmlSelect::options so that empy labels would not be translated.
 # Fixed duplicate support for com_modules.
 # Changed JApplcation::redirect to default to 303 and added $moved argument to allow for permanent redirects.
 ^ Adjust redirect plugin to use permanent redirect.

12-Dec-2009 Louis Landry
 ^ Merged in refactored banners component thanks to Christophe Demko.
 ! Removed trailing whitespace.

12-Dec-2009 Sam Moffatt
 ! First commit from 32,000 feet
 # Alteration to JError:getErrors to fix an error temporarily
 ^ propset svn:keywords Id on a few files
 ^ General documentation clean up

11-Dec-2009 Louis Landry
 ^ [#18958] Administrator > Site > System Information > Directory Permissions (images/stories/) - Thanks Ryan Briscall
 ^ Clean up of reference operators as they aren't needed in PHP5 - Thanks Joe LeBlanc
