@@ -424,6 +424,20 @@
 			<option
 				value="0">JNo</option>
 		</field>
+
+		<field
+			name="unicodeslugs"
+			type="radio"
+			default="0"
+			label="Config_Unicodeslugs_Label"
+			description="Config_Unicodeslugs_Desc"
+			required="true"
+			filter="integer">
+			<option
+				value="1">JYes</option>
+			<option
+				value="0">JNo</option>
+		</field>
 	</fields>
 
 	<fields
