@@ -131,7 +131,7 @@ class NewsfeedsTableNewsfeed extends JTable
 		if (empty($this->alias)) {
 			$this->alias = $this->name;
 		}
-		$this->alias = JFilterOutput::stringURLSafe($this->alias);
+		$this->alias = JApplication::stringURLSafe($this->alias);
 		if (trim(str_replace('-','',$this->alias)) == '')
 		{
 			$this->alias = JFactory::getDate()->toFormat("%Y-%m-%d-%H-%M-%S");
