@@ -238,10 +238,10 @@ class WeblinksModelWeblink extends JModelForm
 		$user = JFactory::getUser();
 
 		$table->title		= htmlspecialchars_decode($table->title, ENT_QUOTES);
-		$table->alias		= JFilterOutput::stringURLSafe($table->alias);
+		$table->alias		= JApplication::stringURLSafe($table->alias);
 
 		if (empty($table->alias)) {
-			$table->alias = JFilterOutput::stringURLSafe($table->title);
+			$table->alias = JApplication::stringURLSafe($table->title);
 		}
 
 		if (empty($table->id)) {
